--- a/documentation/docs/setup_a_node.mdx
+++ b/documentation/docs/setup_a_node.mdx
@@ -69,7 +69,7 @@ You can run the following command to install brew:
 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 ```
 
-After the installer finishes, you can use the brew to install the required packages by running:
+After the installer finishes, you can use brew to install the required packages by running:
 
 ```shell
 brew install cmake npm
@@ -156,13 +156,13 @@ rustup update
 
 ### Download the Source
 
-Once you have installed all the required dependencies, you can start compiling the Bee Node. To do so, you can simply clone the source code by running the following command.
+Once you have installed all the required dependencies, you can start compiling the Bee Node. To get started, you should clone the source code by running the following command.
 
 ```shell
 git clone https://github.com/iotaledger/bee.git --branch dev
 ```
 
-#### Compiling
+### Compiling
 Before you start compiling Bee, you should change your current directory to `bee/bee-node`. You can do so by running the following command from the same directory where you downloaded the source:
 
 ```shell
@@ -171,7 +171,7 @@ cd bee/bee-node
 
 You can compile Bee in two manners:
 
-### With Dashboard
+#### With Dashboard
 
 If you want to build Bee with its Dashboard, you should run the following commands:
 
@@ -222,7 +222,7 @@ cargo build --release --features dashboard
 </TabItem>
 </Tabs>
 
-### Without dashboard
+#### Without dashboard
 
 If you want to build Bee without its Dashboard, you should run the following command:
 
