JSON config support (#1112)
* Use serde aliases

* Remove useless and noisy _builder/_config suffixes

* More serde aliases

* Support Json and Toml config files

* Some documentation

* Add missing serde alias

* JSON example config files

* Match file extension

* Fmt

* Clippy

* Fix doctest

* Add JSON to config conformity tests

* Use latest fern-logger version

* Address review comments

* fmt

--- a/documentation/docs/setup_a_node.mdx
+++ b/documentation/docs/setup_a_node.mdx
@@ -236,7 +236,7 @@ Once you have downloaded and compiled Bee, you should copy make a copy of the ex
 
 To copy the example configuration file, you should run the following command:
 ```shell
-cp config.example.toml config.toml
+cp config.template.json config.json
 ```
 
 Once you have copied and updated the configuration, you can run your Bee node by executing the following command:
