--- a/documentation/docs/setup_a_node.mdx
+++ b/documentation/docs/setup_a_node.mdx
@@ -1,5 +1,5 @@
 ---
-description: You can find the source code for Bee in the official Bee repository. Before you can install Bee from source, you will need to install some required dependencies.
+description: You can find the source code for Bee in the official Bee repository. Before you can install Bee from the source, you will need to install some required dependencies.
 image: /img/logo/bee_logo.png
 keywords:
 - nodes
@@ -9,13 +9,14 @@ keywords:
 - macOS
 - linux
 - Debian
+- how to
 ---
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 # Set Up a Node
 
-You can find the source code for Bee in the [official Bee repository](https://github.com/iotaledger/bee).  Before you can install Bee from source, you will need to install some required dependencies.
+You can find the source code for Bee in the [official Bee repository](https://github.com/iotaledger/bee). Before you can install Bee from the source, you will need to install some required dependencies.
 
 ## Installing from Source
 
@@ -36,16 +37,16 @@ values={[
 
 To run a Bee node in a Debian base system you will need to install the following packages:
 
-- [git](https://git-scm.com/)
-- [npm](https://www.npmjs.com/)
-- [build-essential](https://packages.debian.org/sid/build-essential)
-- [cmake](https://cmake.org/)
-- [pkg-config](https://packages.debian.org/sid/pkg-config)
-- [librocksdb-dev](https://packages.debian.org/sid/librocksdb-dev)
-- [llvm](https://apt.llvm.org/)
-- [clang](https://packages.debian.org/search?keywords=clang)
-- [libclang-dev](https://packages.debian.org/unstable/libclang-dev)
-- [libssl-dev](https://packages.debian.org/jessie/libssl-dev)
+- [git](https://git-scm.com/).
+- [npm](https://www.npmjs.com/).
+- [build-essential](https://packages.debian.org/sid/build-essential).
+- [cmake](https://cmake.org/).
+- [pkg-config](https://packages.debian.org/sid/pkg-config).
+- [librocksdb-dev](https://packages.debian.org/sid/librocksdb-dev).
+- [llvm](https://apt.llvm.org/).
+- [clang](https://packages.debian.org/search?keywords=clang).
+- [libclang-dev](https://packages.debian.org/unstable/libclang-dev).
+- [libssl-dev](https://packages.debian.org/jessie/libssl-dev).
 
 To install all of these packages, you can run the following commands:
 
@@ -60,8 +61,8 @@ apt-get install git npm build-essential cmake pkg-config librocksdb-dev llvm cla
 
 To run a Bee node in a macOS system, you will need to install the following packages using the [brew](https://brew.sh/) package manager:
 
-- [cmake](https://cmake.org/)
-- [npm](https://www.npmjs.com/)
+- [cmake](https://cmake.org/).
+- [npm](https://www.npmjs.com/).
 
 You can run the following command to install brew:
 
@@ -81,9 +82,9 @@ brew install cmake npm
 To run a Bee node in a Windows system, you will need to install the following packages using the
 [chocolatey](https://chocolatey.org/) package manager:
 
-- [cmake](https://cmake.org/)
-- [nodejs-lts](https://nodejs.org/)
-- [git](https://git-scm.com/)
+- [cmake](https://cmake.org/).
+- [nodejs-lts](https://nodejs.org/).
+- [git](https://git-scm.com/).
 
 To install chocolatey, open Powershell and execute the following command:
 
@@ -106,7 +107,7 @@ You will need to restart Powershell for your changes to take effect.
 
 ### Installing Rust
 
-You will need to install [Rust](https://www.rust-lang.org/) in order to run a Bee node.  You should install version is [1.51](https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html), or above.
+You will need to install [Rust](https://www.rust-lang.org/) to run a Bee node. You should install version [1.51](https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html), or above.
 
 <Tabs
   groupId="operating-systems"
@@ -156,14 +157,14 @@ rustup update
 
 ### Download the Source
 
-Once you have installed all the required dependencies, you can start compiling the Bee Node.  To do so, you can simply clone the source code by running the following command.
+Once you have installed all the required dependencies, you can start compiling the Bee Node. To get started, you should clone the source code by running the following command.
 
 ```shell
 git clone https://github.com/iotaledger/bee.git --branch dev
 ```
 
-#### Compiling
-Before you start compiling Bee, you should change your current directory to `bee/bee-node`.  You can do so by running the following command from the same directory where you downloaded the source:
+### Compiling
+Before you start compiling Bee, you should change your current directory to `bee/bee-node`. You can do so by running the following command from the same directory where you downloaded the source:
 
 ```shell
 cd bee/bee-node
@@ -171,7 +172,7 @@ cd bee/bee-node
 
 You can compile Bee in two manners:
 
-### With Dashboard
+#### With Dashboard
 
 If you want to build Bee with its Dashboard, you should run the following commands:
 
@@ -222,7 +223,7 @@ cargo build --release --features dashboard
 </TabItem>
 </Tabs>
 
-### Without dashboard
+#### Without dashboard
 
 If you want to build Bee without its Dashboard, you should run the following command:
 
@@ -232,7 +233,7 @@ cargo build --release
 
 ### Running
 
-Once you have downloaded and compiled Bee, you should copy make a copy of the example config file.  Be sure to review and update your configuration.  You can find more information on configuring bee in the [configuration section](configuration.md).
+Once you have downloaded and compiled Bee, you should copy make a copy of the example config file. Be sure to review and update your configuration. You can find more information on configuring bee in the [configuration section](configuration.md).
 
 To copy the example configuration file, you should run the following command:
 ```shell
