Update workflow branches

--- a/documentation/docs/setup_a_node.mdx
+++ b/documentation/docs/setup_a_node.mdx
@@ -160,7 +160,7 @@ rustup update
 Once you have installed all the required dependencies, you can start compiling the Bee Node. To get started, you should clone the source code by running the following command.
 
 ```shell
-git clone https://github.com/iotaledger/bee.git --branch dev
+git clone https://github.com/iotaledger/bee.git --branch mainnet-develop
 ```
 
 ### Compiling
