--- a/documentation/docs/setup_a_node.mdx
+++ b/documentation/docs/setup_a_node.mdx
@@ -187,7 +187,7 @@ cargo build --release
 
 ### Running
 
-Once you have downloaded and compiled Bee, you should copy make a copy of the example config file. Be sure to review and update your configuration. You can find more information on configuring bee in the [configuration section](configuration.mdx).
+Once you have downloaded and compiled Bee, you should make a copy of the example config file. Be sure to review and update your configuration. You can find more information on configuring Bee in the [configuration section](configuration.mdx).
 
 To copy the example configuration file, you should run the following command:
 ```shell
